--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,28 @@
-language: r
-cache: packages
+sudo: require
+language: cpp
+compiler: gcc
 
-r_github_packages:
-  - jimhester/lintr
-  - jimhester/covr
-  - MangoTheCat/goodpractice
+before_install:
+  - sudo add-apt-repository --yes ppa:marutter/rrutter 
+  - sudo apt-get update -qq
 
-after_success:
-  - Rscript -e 'lintr::lint_package()'
-  - Rscript -e 'library(covr); codecov()'
-  - Rscript -e 'library(goodpractice); gp()'
+install: 
+  - sudo apt-get install -qq r-base r-base-dev 
+  - sudo apt-get install -qq texlive
+  - sudo pip install codecov
+
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+
+before_script:
+ - sudo Rscript install_r_packages.R
+
+script: 
+ - cd DDD
+ - R CMD check .
+
+after_succes:
+ - codecov
+
