test feasibility of parameters updated

--- a/DDD/NAMESPACE
+++ b/DDD/NAMESPACE
@@ -8,4 +8,5 @@ importFrom("utils", "flush.console")
 importFrom("Matrix","sparseMatrix","Diagonal")
 importFrom("SparseM","solve")
 importFrom("expoRkit","expv")
+importFrom("pracma","sortrows")
 exportPattern("^[[:alpha:]]+")
