--- a/DDD/DESCRIPTION
+++ b/DDD/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: DDD
 Type: Package
 Title: Diversity-Dependent Diversification
-Version: 3.4
-Date: 2017-02-23
+Version: 3.5
+Date: 2017-03-17
 Depends: R (>= 3.0.2), deSolve, ape, ade4
-Imports: phytools, subplex, Matrix, expoRkit, SparseM
+Imports: phytools, subplex, Matrix, expoRkit, SparseM, pracma
 Author: Rampal S. Etienne & Bart Haegeman
 Maintainer: Rampal S. Etienne <r.s.etienne@rug.nl>
 License: GPL-3
