--- a/DDD/NAMESPACE
+++ b/DDD/NAMESPACE
@@ -10,3 +10,4 @@ importFrom("SparseM","solve")
 importFrom("expoRkit","expv")
 importFrom("pracma","sortrows")
 exportPattern("^[[:alpha:]]+")
+useDynLib("DDD",.registration = TRUE)
